now accepted, published Open Access in MEE

--- a/dsm-paper.tex
+++ b/dsm-paper.tex
@@ -15,7 +15,7 @@ Len Thomas$^{2}$.}
 \item Department of Natural Resources Science, University of Rhode Island, Kingston, Rhode Island 02881, USA
 \item Centre for Research into Ecological and Environmental Modelling,\\ The Observatory, University of St. Andrews, St. Andrews KY16 9LZ, UK
 }
-\nwords{5284}
+\nwords{5104}
 \ntables{0}
 \nfig{6}
 \nref{47}
@@ -47,7 +47,7 @@ Len Thomas$^{2}$.}
 \section*{Introduction}
 \label{s:intro}
 
-When surveying biological populations it is increasingly common to record spatially referenced data, for example: coordinates of observations, habitat type, elevation or (if at sea) bathymetry. Spatial models allow for vast databases of spatially-referenced data \citep[e.g. OBIS-SEAMAP,][]{Halpin:2009je} to be harnessed, enabling investigation of interactions between environmental covariates and population densities. Mapping the spatial distribution of a population can be extremely useful, especially when communicating results to non-experts. Recent advances in both methodology and software have made spatial modelling readily available to the non-specialist \citep[e.g.,][]{Wood:2006wz, Rue:2009tw}. Here we use the term ``spatial model'' to refer to any model that includes any spatially referenced covariates, not only those models that include location as a covariate. This article is concerned with combining spatial modelling techniques with distance sampling \citep{Buckland:2001vm, Buckland:2004ts}. 
+When surveying biological populations it is increasingly common to record spatially referenced data, for example: coordinates of observations, habitat type, elevation or (if at sea) bathymetry. Spatial models allow for vast databases of spatially-referenced data \citep[e.g. OBIS-SEAMAP,][]{Halpin:2009je} to be harnessed, enabling investigation of interactions between environmental covariates and population densities. Mapping the spatial distribution of a population can be extremely useful, especially when communicating results to non-experts. Recent advances in both methodology and software have made spatial modelling readily available to the non-specialist \citep[e.g.,][]{Wood:2006wz, Rue:2009tw}. Here we use ``spatial model'' to refer to any model that includes any spatially referenced covariates, not only those models that include explicit location terms. This article is concerned with combining spatial modelling techniques with distance sampling \citep{Buckland:2001vm, Buckland:2004ts}. 
 
 Distance sampling extends plot sampling to the case where detection is not certain. Observers move along lines or visit points and record the distance from the line or point to the object of interest ($y$). These distances are used to estimate the \textit{detection function}, $g(y)$ (for example, Fig. \ref{dolphin-df}), by modelling the decrease in detectability with increasing distance from the line or point (conventional distance sampling, CDS). The detection function may also include covariates \citep[multiple covariate distance sampling, MCDS;][]{Marques:2007vm} which affect the scale of the detection function. From the fitted detection function, the average probability of detection can be estimated by integrating out distance. The estimated average probability that an animal is detected given that it is in the area covered by the survey, $\hat{p}_i$, can then be used to estimate abundance as
 
@@ -75,23 +75,21 @@ Modelling of spatially referenced distance sampling data is equivalent to modell
 
 \subsection*{Two-stage approaches}
 
-The focus of this article is the ``count model'' of \cite{Hedley:2004et}, we will henceforth refer to this approach as \textit{density surface modelling} (DSM). Modelling proceeds in two steps: a detection function is fitted to the distance data to obtain detection probabilities for clusters (flocks, pods, etc.) or individuals. Counts are allocated to corresponding segments (contiguous transect sections). A generalised additive model \cite[GAM; e.g.][]{Wood:2006wz} is then constructed with the per-segment counts as the response with either counts or segment areas corrected for detectability (see \textit{Density surface modelling}, below). GAMs provide a flexible class of models that include generalized linear models \citep[GLMs;][]{McCullagh:1989ux} but extend them with the possible addition of splines to create smooth functions of covariates, random effects terms or correlation structures. We cover advances using this approach in \textit{Recent developments}.
+The focus of this article is the ``count model'' of \cite{Hedley:2004et}, we will henceforth refer to this approach as \textit{density surface modelling} (DSM). Modelling proceeds in two steps: a detection function is fitted to the distance data to obtain detection probabilities for clusters (flocks, pods, etc.) or individuals. Counts are then summarised per segment (contiguous transect section). A generalised additive model \cite[GAM; e.g.][]{Wood:2006wz} is then constructed with the per-segment counts as the response with either counts or segment areas corrected for detectability (see \textit{Density surface modelling}, below). GAMs provide a flexible class of models that include generalized linear models \citep[GLMs;][]{McCullagh:1989ux} but extend them with the possible addition of splines to create smooth functions of covariates, random effects terms or correlation structures. We cover advances using this approach in \textit{Recent developments}.
 
-\cite{Niemi:2010kx} proposed a Bayesian point process approach to spatial abundance modelling. The density of the objects is described by an intensity function, which included spatially-referenced covariates. Model fitting proceeded in two stages: first the detection function was fitted, then the spatial model (via MCMC) assuming the detection function parameters were known, so detection function uncertainty was not incorporated in the spatial model. A marked point process \citep[Section 5.5]{cox1980point} could be used to incorporate cluster size information.
+As with the DSM approach, \cite{Niemi:2010kx} used a two-step procedure: first fitting a detection function, then using a Bayesian point process to model spatial pattern (fitted using MCMC). Object density was described by an intensity function, which included spatially-referenced covariates. A possible disadvantage of their approach was that the distance function was assumed fixed once its parameters are estimated, and thus uncertainty may not be correctly propagated into final abundance estimates.
 
-\cite{VerHoef:2013ky} modeled seal populations in the Bering Sea using a Bayesian spatial model, using a detection function to account for uncertain detection and incorporating additional information from a (frequentist) model of seal haul-outs on ice. The detection function and haul-out model corrected the observed density estimates which were modelled using a Bayesian hierarchical model for the spatial component. The Bayesian hierarchical model was itself was split into two parts ($i$) a presence/absence part to allow modelling of the large number of zeros in the data and ($ii$) a density part also used to account for spatial autocorrelation. The analysis shows that when extra information is available (such as telemetry data for the haul-out process) additional insight can be derived.
+\cite{VerHoef:2013ky} also included separate density and detection models for seals in the Bering sea. However, they were able to separate the detection process into three components: (i) incomplete detection on the transect line, (ii) declining detection probability as a function of distance, and (iii) availability bias (as seals could only be observed when hauled out on ice flows).  After correcting counts for uncertain detection, they used a hierarchical, zero-inflated spatial regression model to estimate abundance, propagating variance associated with each stage of modelling into final estimates. The analysis shows that when extra information is available (such as telemetry data for the haul-out process) additional insight can be derived.
 
-We note that there are many approaches to modelling spatially referenced count data \citep[][provides an overview of such methods for marine bird modelling]{Oppel:2011tv}. Also worthy of note is the approach of \cite{Barry:2002bm} who used a two-stage approach to model presence/absence then spatial pattern (via two GAMs) to account for zero-inflation.
+We note that there are many approaches to modelling spatially referenced count data \citep[][provides an overview of such methods for marine bird modelling]{Oppel:2011tv}. Also worthy of note is the approach of \cite{Barry:2002bm} who used a two-stage approach to model presence/absence then spatial distribution (each via a separate GAM) to account for zero-inflation.
 
 \subsection*{One-stage approaches}
 
-Rather than fitting two separate models, some authors have combined the detection function and spatial model fitted (mostly via hierarchical Bayesian methods). The first of these was \cite{Royle:2004tu}, who estimated the parameters of a specified detection function, formulating an unconditional likelihood per-point/line as a function of the unobserved transect abundances. These unobserved abundances were treated as random effects, integrated out to give a per-transect likelihood as a function of detection function and random effects parameters (linear functions of the environmental covariates). Due to the multinomial nature of the per-transect likelihood proposed, detection distances must be allocated to bins (e.g. 0-5m, 5-15m, etc). \cite{Chelgren:2011us} proposed replacing the multinomial per-transect likelihood with a binomial distribution multiplied by a detection function. The binomial term collapses the multinomial bins into a single bin and gives the number of animals detected in the transect, thus allowing the use of exact distances.
+Rather than fitting two separate models, some authors have estimated parameters of the detection and spatial models simultaneously. Perhaps the first such example was \cite{Royle:2004tu}, who considered an integrated likelihood model for point and line transects. The approach views abundance as a nuisance variable which was integrated out of the likelihood, but inferences may still be made about factors affecting underlying density (including covariate effects). This approach was originally developed for binned distance data, but was extended by \cite{Chelgren:2011us} for continuous distance data.
 
-The work of \cite{Schmidt:2011ec} took a similar approach to \cite{Royle:2008wc}, building a presence/absence-type model for clusters, augmenting the data with unobserved clusters. The authors then used a Poisson distribution to model cluster size (using a random effect to incorporate overdispersion), combining these parts gave a model of individual abundance. \cite{Conn:2012bx} also used a hierarchical Bayesian model but in terms of abundance rather than density using a super-population/data augmentation approach \cite[as in][]{Link:2009wv}. In their formulation, the whole population within the study region was modelled, not just those animals observed during the survey.
+Both \cite{Schmidt:2011ec} and \cite{Conn:2012bx} took data augmentation approaches to add unobserved clusters within their hierarchical Bayesian models. \cite{Schmidt:2011ec} used a presence/absence-type model and a super-population approach \citep[as in][]{Royle:2008wc}. \cite{Conn:2012bx} augmented observations only within the sampled transects using RJMCMC. Looking at the problem with at a coarser spatial resolution (stratum-level), \cite{Moore:2011jf} separated the problem into observation and process components using a state-space model. The process component described the underlying population density as it changed over time and space, which was linked to the data via the detection function. 
 
-\cite{Moore:2011jf} adopted a hierarchical Bayesian state-space model, separating the problem into observation and process components. The process component described the underlying population density as it changed over time and space (though the authors only included strata as a spatial component). The observation part of the model then linked the process model to the data via the detection function. 
-
-\cite{Johnson:2010gf} proposed a point process-based model for distance sampling data. They first assumed that the locations of all individuals in the survey area (not just those observed) form a realisation of a Poisson process. Parameters of the intensity function were then estimated via standard maximum likelihood methods for point processes \citep{Baddeley:2000to}. All parameters were estimated jointly so uncertainty from both the spatial pattern and the detection function was incorporated into variance estimates of the abundance. This also ensured that correlations between the detection function and underlying point process were estimated correctly (and did not falsely inflate or deflate variance estimates). A post-hoc correction factor was used to address overdispersion unmodelled by spatial covariates (i.e. counts that do not follow a Poisson mean-variance relationship).
+Another point process-based approach is that of \cite{Johnson:2010gf}, who used a Poisson process to model the locations of individuals in the survey area. Unlike \cite{Niemi:2010kx}, parameters of the intensity function were estimated jointly with detection function parameters via standard maximum likelihood methods for point processes \citep{Baddeley:2000to} (allowing uncertainty from both the spatial pattern and detection function to be included in variance estimates). A post-hoc correction factor was used to address overdispersion unmodelled by spatial covariates (i.e. counts that do not follow a Poisson mean-variance relationship).
 
 \subsection*{One- vs. two-stage approaches}
 
